--- a/public/style.css
+++ b/public/style.css
@@ -11,3 +11,23 @@ canvas {
     width: 100%;
     height: 100%;
 }
+
+.XOJ {
+    perspective: 600px;
+    display: block;
+    position: absolute;
+    left: 130px;
+    top: 200px;
+}
+
+.left {
+    transform: rotateX(50deg) skewX(-20deg);
+}
+
+.mid {
+    transform: rotateX(50deg);
+}
+
+.right {
+    transform: rotateX(50deg) skewX(20deg);
+}
