--- a/public/style.css
+++ b/public/style.css
@@ -31,3 +31,27 @@ canvas {
 .right {
     transform: rotateX(50deg) skewX(20deg);
 }
+
+#modal {
+    background: rgba(0,0,0,0.5);
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    z-index: 1000;
+}
+
+#modal div {
+    width: 300px;
+    margin: 100px auto;
+    background-color: #fff;
+    border: 1px solid #000;
+    padding: 15px;
+    text-align: center;
+}
+
+.hidden {
+    display: none;
+}
