--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,27 @@ canvas {
     height: 100%;
 }
 
+#tictactower {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+#topBar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    background: #eee;
+    text-align: center;
+}
+
+#topText {
+    margin: 10px;
+}
+
 .XOJ {
     perspective: 1000px;
     display: block;
