--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,10 @@ canvas {
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
+    max-width: 600px;
+    max-height: 800px;
+    width: 95%;
+    height: auto;
 }
 
 #topBar {
