--- a/public/style.css
+++ b/public/style.css
@@ -45,6 +45,11 @@ canvas {
     top: 200px;
 }
 
+.XOJ_icon {
+    width: 10px;
+    height: 10px;
+}
+
 .left {
     transform: rotateX(50deg) skewX(-20deg);
 }
@@ -64,7 +69,6 @@ canvas {
     top: 0px;
     width: 100%;
     height: 100%;
-    text-align: center;
     z-index: 1000;
 }
 
@@ -74,9 +78,17 @@ canvas {
     background-color: #fff;
     border: 1px solid #000;
     padding: 15px;
-    text-align: center;
 }
 
 .hidden {
     display: none;
+}
+
+.h-center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.text-center {
+    text-align: center;
 }
